more links on new homepage

--- a/python/fatcat_web/templates/home.html
+++ b/python/fatcat_web/templates/home.html
@@ -62,10 +62,11 @@
         <p><b>Fatcat is a versioned, user-editable catalog of research
         publications including journal articles, conference proceedings, and
         datasets</b>
-        <p>Features include archival
-        file-level metadata (verified digests and long-term copies, in addition to
-        URLs), a <b><a href="https://api.{{ config.FATCAT_DOMAIN }}">documented API</a></b>, and work/release
-        indexing (aka, linking together of pre-prints and final copies).
+        <p>Features include archival file-level metadata (verified digests and
+        long-term copies), an
+        <b><a href="https://api.{{ config.FATCAT_DOMAIN }}">open, documented API</a></b>,
+        and work/release indexing (eg, distinguishing between and linking
+        pre-prints, manuscripts, and version-of-record).
         &nbsp;<a href="/about">Read more...</a>
       </div>
     </div>
@@ -78,13 +79,14 @@
   <div class="ui centered grid">
     <div class="row">
       <div class="twelve wide column" style="font-size: 1.2rem;">
-        <p>The fatcat service is developed and hosted at <b><a
+        <p>This service is hosted at <b><a
         href="https://archive.org">The Internet Archive</a></b>, a US
         non-profit dedicated to providing Universal Access to All Knowledge.
-        Donations are welcomed!
-        <p>Funding comes the <b>The Andrew Mellon Foundation</b>, to improve
-        preservation and access to "long-tail" open access works on the public
-        web which could otherwise be lost.
+        <a href="https://archive.org/donate/">Donations welcome!</a>
+        <p>Development funding comes from
+        <b><a href="https://blog.archive.org/2018/03/05/andrew-w-mellon-foundation-awards-grant-to-the-internet-archive-for-long-tail-journal-preservation/">The Andrew Mellon Foundation</a></b>
+        to improve preservation and access to "long-tail" open access works on
+        the public web which might otherwise be lost.
       </div>
       <div class="four wide column">
         <img src="/static/ia_logo_text.png" width="140" alt="IA logo">
