--- a/python/fatcat_web/templates/home.html
+++ b/python/fatcat_web/templates/home.html
@@ -119,6 +119,8 @@
 
 <br>
 
+{# this div makes the table scrollable on mobile #}
+<div style="max-width: 100%; overflow-x: auto;">
 <table class="ui single line unstackable table centered" style="max-width: 800px; font-size: 1.1rem; margin-right: auto; margin-left: auto;">
 <thead>
 <tr><th>Entity Type
@@ -237,6 +239,7 @@
 {% endif %}
     <td>
 </table>
+</div>
 
 </div>
 
