--- a/python/fatcat_web/templates/base.html
+++ b/python/fatcat_web/templates/base.html
@@ -2,7 +2,8 @@
 <html lang="en" style="position: relative; min-height: 100%; height: auto;">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="referrer" content="origin-when-cross-origin">
 
   <title>{%- block title -%}
     {%- if config.FATCAT_DOMAIN.startswith('qa.') -%}
@@ -12,14 +13,17 @@
     {%- endif -%}
     fatcat!
   {%- endblock -%}</title>
-  <meta name="referrer" content="origin-when-cross-origin">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.1/dist/semantic.min.css"
     crossorigin="anonymous">
   <style>
     {# bnewbold: fix light grey bars in header #}
     .ui.inverted.menu .item:before { background: none; }
+
+    @media only screen and (max-width: 479px) {
+      .mobile-hide{ display: none !important; }
+    }
   </style>
   {% block extra_head %}{% endblock %}
 </head>
@@ -44,9 +48,9 @@
       <!-- <img class="logo" src="assets/images/logo.png"> -->
       fatcat!
     </a>
-    <a href="/about" class="item">About</a>
-    <a href="https://guide.{{ config.FATCAT_DOMAIN }}/" class="item">Guide</a>
-    <a href="/changelog" class="item">Changelog</a>
+    <a href="/about" class="item mobile-hide">About</a>
+    <a href="https://guide.{{ config.FATCAT_DOMAIN }}/" class="item mobile-hide">Guide</a>
+    <a href="/changelog" class="item mobile-hide">Changelog</a>
     <div class="right menu">
       <div class="item" style="padding: 0;">
         <form class="" action="/search" method="get" role="search" aria-label="Papers">
