--- a/python/fatcat_web/templates/stats.html
+++ b/python/fatcat_web/templates/stats.html
@@ -13,7 +13,7 @@ You can also fetch these numbers <a href="./stats.json">as JSON</a>.
 
 <table class="ui structured table">
   <tbody>
-    <tr><td rowspan="5" class="active top aligned center aligned" style="padding-top:0px;"><b>"Papers"</b></td>
+    <tr style="padding-top:0px;"><td rowspan="5" class="active top aligned center aligned"><b>"Papers"</b></td>
         <td>Total</td>
         <td class="right aligned">{{ "{:,}".format(stats.papers.total) }}</td>
     <tr>
@@ -29,14 +29,14 @@ You can also fetch these numbers <a href="./stats.json">as JSON</a>.
         <td>On web, not in Keepers</td>
         <td class="right aligned">{{ "{:,}".format(stats.papers.in_web_not_kbart) }}</td>
 
-    <tr><td rowspan="2" class="active top aligned center aligned" style="padding-top:0px;"><b>Releases</b></td>
+    <tr style="padding-top:0px;"><td rowspan="2" class="active top aligned center aligned"><b>Releases</b></td>
         <td>Total</td>
         <td class="right aligned">{{ "{:,}".format(stats.release.total) }}</td>
     <tr>
         <td>References (raw, unlinked)</td>
         <td class="right aligned">{{ "{:,}".format(stats.release.refs_total) }}</td>
 
-    <tr><td rowspan="1" class="active top aligned center aligned" style="padding-top:0px;"><b>Containers</b></td>
+    <tr style="padding-top:0px;"><td rowspan="1" class="active top aligned center aligned"><b>Containers</b></td>
         <td>Total</td>
         <td class="right aligned">{{ "{:,}".format(stats.container.total) }}</td>
   </tbody>
