more descriptive HTML titles

--- a/python/fatcat_web/templates/auth_login.html
+++ b/python/fatcat_web/templates/auth_login.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Login/Signup{% endblock %}
+
 {% block fullbody %}
 <div class="ui centered grid container">
 <div class="eight wide column" style="font-size: 1.14285714rem;">
