--- a/python/fatcat_web/templates/base.html
+++ b/python/fatcat_web/templates/base.html
@@ -11,8 +11,8 @@
     {%- elif config.FATCAT_DOMAIN.startswith('dev.') -%}
       {{- "[DEV] " -}}
     {%- endif -%}
-    fatcat!
-  {%- endblock -%}</title>
+    Perpetual Access Machine
+  {%- endblock -%} | fatcat!</title>
 
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.1/dist/semantic.min.css"
