--- a/python/fatcat_web/templates/changelog_view.html
+++ b/python/fatcat_web/templates/changelog_view.html
@@ -1,5 +1,8 @@
 {% set auth_to = {} %}
 {% extends "editgroup_view.html" %}
+
+{% block title %}Changelog #{{ entry.index }}{% endblock %}
+
 {% block editgroupheader %}
 
 <h1 class="ui header">Changelog Entry
