--- a/python/fatcat_web/templates/deleted_entity.html
+++ b/python/fatcat_web/templates/deleted_entity.html
@@ -1,6 +1,8 @@
 {% import "entity_macros.html" as entity_macros %}
 {% extends "base.html" %}
 
+{% block title %}[deleted]{% endblock %}
+
 {% block fullbody %}
 
 <div class="ui stackable mobile reversed grid centered">
