--- a/python/fatcat_web/templates/about.html
+++ b/python/fatcat_web/templates/about.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+
+{% block title %}About{% endblock %}
+
 {% block body %}
 
 <img class="ui fluid bordered image" src="/static/fatcat.jpg" title="CC0 photo of an oversized feline" alt="">
