--- a/python/fatcat_web/templates/container_search.html
+++ b/python/fatcat_web/templates/container_search.html
@@ -1,4 +1,13 @@
 {% extends "base.html" %}
+
+{% block title %}
+{% if query %}
+  Search: {{ query }}
+{% else %}
+  Release Search
+{% endif %}
+{% endblock %}
+
 {% block fullmain %}
 
 <div class="ui vertical stripe segment" style="background-color: #EEE; padding-top: 4.5em;">
