--- a/python/fatcat_web/templates/editgroup_reviewable.html
+++ b/python/fatcat_web/templates/editgroup_reviewable.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+
+{% block title %}Reviewable Editgroups{% endblock %}
+
 {% block body %}
 
 <h1 class="ui header">Reviewable Editgroups
