--- a/python/fatcat_web/templates/editor_view.html
+++ b/python/fatcat_web/templates/editor_view.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+
+{% block title %}{{ editor.username }} (editor){% endblock %}
+
 {% block body %}
 
 <h1 class="ui header">{{ editor.username }}
