fix whitespace in HTML title; nothing on home

--- a/python/fatcat_web/templates/base.html
+++ b/python/fatcat_web/templates/base.html
@@ -12,7 +12,7 @@
       {{- "[DEV] " -}}
     {%- endif -%}
     Perpetual Access Machine
-  {%- endblock -%} | fatcat!</title>
+  {%- endblock %} | fatcat!</title>
 
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.1/dist/semantic.min.css"
