--- a/python/fatcat_web/templates/home.html
+++ b/python/fatcat_web/templates/home.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
-{% block title %}Perpetual Access to the Scholarly Record{% endblock %}
+{# no special title for now #}
+{# {% block title %}Perpetual Access to the Scholarly Record{% endblock %} #}
 
 {% block extra_head %}
   <link rel="canonical" href="https://{{ config.FATCAT_DOMAIN }}/">
