show release original_title in header

--- a/python/fatcat_web/templates/entity_base.html
+++ b/python/fatcat_web/templates/entity_base.html
@@ -39,6 +39,9 @@
             {% if entity.subtitle %}
               <br><span style="font-size: smaller; font-weight: normal;">{{ entity.subtitle }}</span>
             {% endif %}
+            {% if entity.original_title %}
+              <br><span style="font-size: smaller; font-weight: normal;">{{ entity.original_title }}</span>
+            {% endif %}
           {% endif %}
           <span class="sub header">
             <code>
