--- a/python/fatcat_web/templates/release_search.html
+++ b/python/fatcat_web/templates/release_search.html
@@ -49,7 +49,11 @@
   </h4>
   {% if paper.best_pdf_url %}
   <div style="float: right; padding: 4px;">
-  &nbsp;&nbsp;<a href="{{ paper.best_pdf_url }}" class="ui violet tag label"><i class="file icon"></i>fulltext</a>
+  {% if paper.ia_pdf_url and '://web.archive.org' in paper.ia_pdf_url %}
+  &nbsp;&nbsp;<a href="/release/{{ paper.ident }}/camp_pdf" class="ui yellow tag label"><i class="tree icon"></i>local copy</a>
+  <br>
+  {% endif %}
+  &nbsp;&nbsp;<a href="{{ paper.best_pdf_url }}" class="ui violet tag label">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="file icon"></i>fulltext</a>
   </div>
   {% endif %}
   {#
