perpetual access to the scholarly record

--- a/python/fatcat_web/templates/base.html
+++ b/python/fatcat_web/templates/base.html
@@ -11,7 +11,7 @@
     {%- elif config.FATCAT_DOMAIN.startswith('dev.') -%}
       {{- "[DEV] " -}}
     {%- endif -%}
-    Perpetual Access Machine
+    Perpetual Access To The Scholarly Record
   {%- endblock %} | fatcat!</title>
 
   <link rel="stylesheet"
