include example releases on container landing page
Included making release search results an entity macro (in webface
templates).

--- a/python/fatcat_web/templates/container_view.html
+++ b/python/fatcat_web/templates/container_view.html
@@ -33,6 +33,12 @@
     </div>
   </div>
 </form>
+
+{% if container._random_releases %}
+<h3>Example Publications</h3>
+{% for random_release in container._random_releases %}
+  {{ entity_macros.release_search_result_row(random_release) }}
+{% endfor %}
 {% endif %}
 
 </div>
