--- a/python/fatcat_web/templates/entity_macros.html
+++ b/python/fatcat_web/templates/entity_macros.html
@@ -144,3 +144,80 @@
   </div>
 </form>
 {%- endmacro %}
+
+{% macro release_search_result_row(paper) -%}
+<div>
+  <h4 style="margin-top: 1em; margin-bottom: 0px; font-size: 1.1em;">
+    <a href="/release/{{ paper.ident }}" style="color: #2224c7;">
+      {% if paper.title %}
+        {{ paper.title[:512] }}
+        {% if paper.title|length > 512 %}...{% endif %}
+      {% else %}
+        [blank]
+      {% endif %}
+    </a>
+  </h4>
+  {% if paper.best_pdf_url %}
+  <div style="float: right; padding: 4px;">
+  &nbsp;&nbsp;<a href="{{ paper.best_pdf_url }}" class="ui violet tag label"><i class="file icon"></i>fulltext</a>
+  </div>
+  {% endif %}
+  {#
+  <h5 style="margin-top: 4px; margin-bottom: 4px; font-size: 1em;">{{ ", ".join(paper.contrib_names[:12]) }}
+    {% if paper.contrib_names|length > 12 %}<i>(+{{ paper.contrib_names|length - 12 }} others)</i>{% endif %}
+  </h5>
+  #}
+  {% if paper.contrib_names %}
+    <div style="margin-top: 0px; margin-bottom: 0px; font-size: 1em;">
+    <b>
+    {{ ", ".join(paper.contrib_names[:12]) }}
+    {% if paper.contrib_names|length > 12 %}<i>(+{{ paper.contrib_names|length - 12 }} others)</i>{% endif %}
+    </b>
+    </div>
+  {% endif %}
+  {% if paper.release_year %}
+    {{ paper.release_year }}
+  {% endif %}
+  {% if paper.release_type %}
+    {% if paper.release_type in ("article-journal", "paper-conference") %}
+      <span class="ui black basic label small">{{ paper.release_type }}</span>
+    {% elif paper.release_type in ("book") %}
+      <span class="ui brown basic label small">{{ paper.release_type }}</span>
+    {% else %}
+      <span class="ui grey basic label small">{{ paper.release_type }}</span>
+    {% endif %}
+  {% endif %}
+  {% if paper.withdrawn_status %}
+    <span class="ui red label small">{{ paper.withdrawn_status }}</span>
+  {% endif %}
+  {% if paper.release_stage and paper.release_stage != "published" %}
+    <span class="ui pink basic label small">{{ paper.release_stage }}</span>
+  {% elif not paper.release_stage %}
+    <span class="ui red basic label small">unknown</span>
+  {% endif %}
+  {% if paper.container_name %}
+    {% if paper.container_id %}
+      <a href="/container/{{ paper.container_id }}" style="color: black;">{{ paper.container_name }}</a>
+    {% else %}
+      {{ paper.container_name }}
+    {% endif %}
+    {% if paper.container_is_oa %}<i class="icon unlock orange small"></i>{% endif %}
+  {% endif %}
+  {% if paper.doi or paper.pmid or paper.arxiv_id or paper.jstor_id %}
+  <br>
+  {% endif %}
+  {% if paper.doi %}
+    <a href="https://doi.org/{{paper.doi }}" style="color: green;">doi:{{ paper.doi }}</a> &nbsp;
+  {% endif %}
+  {% if paper.pmid %}
+    <a href="https://www.ncbi.nlm.nih.gov/pubmed/{{paper.pmid }}" style="color: green;">pmid:{{ paper.pmid }}</a> &nbsp;
+  {% endif %}
+  {% if paper.arxiv_id %}
+    <a href="https://arxiv.org/abs/{{paper.arxiv_id }}" style="color: green;">arXiv:{{ paper.arxiv_id }}</a> &nbsp;
+  {% endif %}
+  {% if False %} {# XXX: elastic release work grouping searches #}
+  <br>
+  <a href="/work/{{ paper.work_id }}"><i class="sitemap icon"></i> and 5 other versions of the same work!</a>
+  {% endif %}
+</div>
+{% endmacro %}
