--- a/python/fatcat_web/templates/entity_base.html
+++ b/python/fatcat_web/templates/entity_base.html
@@ -78,7 +78,9 @@
         <div style="min-width: 40em;">
           <div class="ui small tabular compact menu">
             {{ entity_tab("overview", "Overview", "") }}
-            {% if entity_type == "release" %}
+            {% if entity_type == "container" and entity.state == 'active' and not editgroup %}
+              {{ entity_tab("coverage", "Coverage", "/coverage") }}
+            {% elif entity_type == "release" %}
               {{ entity_tab("contribs", "Authors", "/contribs", entity._authors|count ) }}
               {{ entity_tab("references", "References", "/references", entity.refs|count) }}
             {% endif %}
